--- a/templates/income.html
+++ b/templates/income.html
@@ -1,1 +1,8 @@
-Placeholder content for income.html
+<!DOCTYPE html>
+<html>
+<head><title>Income</title></head>
+<body>
+  <h1>Income Page</h1>
+  <p>This is where income data will go.</p>
+</body>
+</html>
