--- a/templates/sales.html
+++ b/templates/sales.html
@@ -1,1 +1,10 @@
-Placeholder content for sales.html
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Sales - MMT Cargo</title>
+</head>
+<body>
+  <h1>Sales Page</h1>
+  <p>This page will display cargo sales data.</p>
+</body>
+</html>
