--- a/templates/withdrawals.html
+++ b/templates/withdrawals.html
@@ -1,1 +1,8 @@
-Placeholder content for withdrawals.html
+<!DOCTYPE html>
+<html>
+<head><title>Withdrawals</title></head>
+<body>
+  <h1>Withdrawals Page</h1>
+  <p>This is where withdrawal info will go.</p>
+</body>
+</html>
