--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,12 @@
-Placeholder content for login.html
+<!DOCTYPE html>
+<html>
+<head><title>Login</title></head>
+<body>
+  <h1>Login Page</h1>
+  <form>
+    <input type="text" placeholder="Username" /><br />
+    <input type="password" placeholder="Password" /><br />
+    <button type="submit">Login</button>
+  </form>
+</body>
+</html>
