--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,10 @@
 <html>
 <head><title>Login</title></head>
 <body>
-  <h1>Login Page</h1>
+  <h1>Login</h1>
   <form>
-    <input type="text" placeholder="Username" /><br />
-    <input type="password" placeholder="Password" /><br />
+    <input type="text" name="username" placeholder="Username"><br><br>
+    <input type="password" name="password" placeholder="Password"><br><br>
     <button type="submit">Login</button>
   </form>
 </body>
