--- a/templates/withdrawals.html
+++ b/templates/withdrawals.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head><title>Withdrawals</title></head>
+<head>
+  <title>Withdrawals</title>
+</head>
 <body>
   <h1>Withdrawals</h1>
+
   <form action="/add-withdrawal" method="POST">
-    <input type="text" name="method" placeholder="Withdrawal Method" required>
+    <select name="partner" required>
+      <option value="">-- Select Partner --</option>
+      <option value="Manager">Manager</option>
+      <option value="Partner 1">Partner 1</option>
+      <option value="Partner 2">Partner 2</option>
+      <option value="Partner 3">Partner 3</option>
+    </select>
+    <input type="text" name="method" placeholder="Method" required>
     <input type="number" name="amount" placeholder="Amount" required>
     <input type="date" name="date" required>
     <button type="submit">Add Withdrawal</button>
   </form>
+
+  <br><br>
+
   <table border="1">
-    <tr><th>ID</th><th>Method</th><th>Amount</th><th>Date</th></tr>
+    <tr>
+      <th>ID</th>
+      <th>Partner</th>
+      <th>Method</th>
+      <th>Amount</th>
+      <th>Date</th>
+    </tr>
     {% for row in withdrawals %}
-    <tr><td>{{ row[0] }}</td><td>{{ row[1] }}</td><td>{{ row[2] }}</td><td>{{ row[3] }}</td></tr>
+    <tr>
+      <td>{{ row[0] }}</td>
+      <td>{{ row[1] }}</td>
+      <td>{{ row[2] }}</td>
+      <td>{{ row[3] }}</td>
+      <td>{{ row[4] }}</td>
+    </tr>
     {% endfor %}
   </table>
 </body>
